# VL_for_AI4PKM_Automation_Features

./: .gitignore  2025-10-17 KTM Improvement.md  AGENTS.md  CLAUDE.md  GEMINI.md  KTP_STARTUP_ENHANCEMENT.md  PR_MESSAGE.md  PR_SUMMARY.md  README_CLI.md  README_KTG.md  README_KTM.md  README_KTP.md  README_KTP_IMPLEMENTATION.md  ai4pkm_cli.json  ai4pkm_cli.json.example  pyproject.toml  test_hot_reload_scenarios.py  test_orchestrator_execution.py
VL_AI4PKM_Automation/: CLAUDE.md  orchestrator.yaml
VL_AI4PKM_Automation/01-AI4PKM_CLI_Structure/: 01_directory_structure.md  02_module_overview.md  03_config_file_guide.md
VL_AI4PKM_Automation/02-Basic_Commands/: 01_installation_guide.md  02_command_cheatsheet.md  03_quick_start_guide.md
VL_AI4PKM_Automation/Projects/: Projects.md
VL_AI4PKM_Automation/_Archive_/: _Archive_.md
VL_AI4PKM_Automation/_Settings_/: _Settings_.md
VL_AI4PKM_Automation/rules/: obsidian.mdc
VL_AI4PKM_Automation/vl_ai4pkm_clippings/: 2025-11-16 AI-powered PKM 실습  AI와 PKM 의 만남. 프로그래밍 언어 없이 일상 언어만으로 앱 개발. 직접 확인하세요.  annotated by Jinyoung.md  (+1 more)
VL_AI4PKM_Automation/vl_ai4pkm_materials/: 00 - AI4PKM_프로젝트_설명.md  (+5 more)
_Sandbox_/: _Sandbox_.md
ai4pkm_cli/: __init__.py  agent_factory.py  claude_runner.py  cli.py  config.py  cron_manager.py  logger.py  main.py  markdown_utils.py  orchestrator_cli.py  server.py
ai4pkm_vault/: AGENTS.md  WORKER.md  ai4pkm_cli.json  orchestrator.yaml  secrets.yaml.example
docs/: CNAME  Manual_Integration_Test_Guide.md  _config.yml  cli_tool.md  faq.md  guidelines.md  index.md  orchestrator.md  prompts.md  workflows.md
(+222 files in other folders)
