[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4pkm-cli"
version = "0.1.0"
description = "Personal Knowledge Management CLI framework"
authors = [{name = "AI4PKM Team"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "croniter>=1.3.0",
    "rich>=13.0.0",
    "python-dateutil>=2.8.0",
    "watchdog>=3.0.0",
    "claude-code-sdk>=0.0.20",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.32.0",
    "tzlocal>=5.3.0",
    "pyyaml>=6.0",
]

[project.scripts]
ai4pkm = "ai4pkm_cli.main.cli:main"

[project.urls]
Homepage = "https://github.com/rbx-labs/ai4pkm-cli"
Repository = "https://github.com/rbx-labs/ai4pkm-cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai4pkm_cli*"]
